--- a/Startr - Free Startup Landing page Template/css/style.css
+++ b/Startr - Free Startup Landing page Template/css/style.css
@@ -180,6 +180,8 @@ a:focus, img:focus, button:focus, .btn:focus {
 
 
 
+
+
 ::-moz-selection {
 
  background-color:#6bb551;
@@ -197,6 +199,20 @@ a:focus, img:focus, button:focus, .btn:focus {
 	color: #fff;
 
 	text-shadow: none;
+
+}
+
+.dark {
+	background-color: #5FB460;
+}
+
+.aboutcontainer {
+	background-color: white;
+	border-radius: 25px;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-top: 2%;
+	padding-bottom: 5%;
 
 }
 
@@ -234,7 +250,7 @@ transition-duration: 0.8s;transition-property: all;transition-timing-function: e
 
 
 
-header[role="header"].header-top .navbar-fixed-top{background-color:rgba(0,0,0,1); padding:5px 0}
+header[role="header"].header-top .navbar-fixed-top{background-color: #5FB460; padding:5px 0}
 
 header[role="header"].header-top .navbar-fixed-top .container{ padding-top:0; position:static}
 
@@ -531,3 +547,8 @@ border-bottom-right-radius: 3px;}
 .footer .copy{ padding:0; margin:0; color:#b6b6b6; font-size:13px; line-height:17px; font-weight:300; padding-top:7px; letter-spacing:1px}
 .footer .copy a{color:#b6b6b6;}
 .footer .fa-heart { color: #e84545; font-size: 11px; margin: 0 2px;}
+
+.iframes{
+
+
+}
