Added about. edit styles.css

--- a/Startr - Free Startup Landing page Template/css/style.css
+++ b/Startr - Free Startup Landing page Template/css/style.css
@@ -213,6 +213,7 @@ a:focus, img:focus, button:focus, .btn:focus {
 	padding-right: 5%;
 	padding-top: 2%;
 	padding-bottom: 5%;
+	margin-bottom: 5%;
 
 }
 
