--- a/Startr - Free Startup Landing page Template/css/style.css
+++ b/Startr - Free Startup Landing page Template/css/style.css
@@ -245,14 +245,15 @@ a:focus, img:focus, button:focus, .btn:focus {
 }
 
 .landingPageBoxMiddle {
-  align-self: center;
-  position: center;
+  align-self: left;
+  
+  position: left;
   background-color: #5FB460;
   border: 2px solid grey;
-  width: 50%;
+
   margin: auto;
   border-radius: 25px;
-  opacity: 0.95;
+  opacity: 0.90;
 
 }
 
@@ -267,16 +268,16 @@ a:focus, img:focus, button:focus, .btn:focus {
 
 .leftL, .rightL {
   width: 25%;
-  height: 400px;
+  height: 300px;
   padding-top: 100px;
 
 }
 
 .middleL {
-  width: 50%;
-  align-self: center;
-  position: center;
-  padding-left: 10%;
+  width: 100%;
+
+/*  padding-left: 10%;
+  height: 200px;*/
 }
 
 .rowL:after {
@@ -285,7 +286,26 @@ a:focus, img:focus, button:focus, .btn:focus {
   clear: both;
 }
 
-
+.myButton {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 /*New Shit*/
  /* ---------------------------------------------------
   Simple Clean Slideshow Template
